--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,10 @@
 #tabs a:hover {
   background-color:#f1f1f1;
 }
+body {
+  background-color:#31343a;
+}
+img {
+  max-height:20%;
+  max-width:20%;
+}
