--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-.tabs a {
+a {
   float:left;
   text-align:center;
   text-decoration:none;
   font-size:50px;
   background-color:#e2e2e2;
 }
-.tabs a.active {
+a.active {
   background-color:mediumseagreen;
 }
-.tabs a:hover {
+a:hover {
   background-color:#f1f1f1;
 }
 body {
