--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ a {
   text-align:center;
   text-decoration:none;
   font-size:50px;
-  background-color:#e2e2e2;
+  background-color:white;
 }
 a.active {
   background-color:mediumseagreen;
