--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ a {
   text-decoration:none;
   font-size:50px;
   background-color:mediumseagreen;
+  width:20%;
 }
 a.active {
   background-color:#3ba365;
