--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ a {
   font-size:50px;
   background-color:mediumseagreen;
   width:20%;
+  margin-top:0px;
 }
 a.active {
   background-color:#3ba365;
@@ -21,6 +22,7 @@ img {
   max-width:20%;
 }
 h1 {
+  margin:auto;
   color:#d7efef;
 }
 h2 {
