--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ a {
   color:white;
   text-align:center;
   text-decoration:none;
-  font-size:50px;
+  font-size:30px;
   background-color:mediumseagreen;
   width:20%;
   margin-top:0px;
@@ -22,7 +22,7 @@ img {
   max-width:20%;
 }
 h1 {
-  margin:auto;
+  margin-top:50px;
   color:#d7efef;
 }
 h2 {
