Changed a:hover color

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ a.active {
   background-color:#3ba365;
 }
 a:hover {
-  background-color:#f1f1f1;
+  background-color:#3ba365;
 }
 body {
   background-color:#31343a;
