Style elements in link.html

--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,10 @@ p {
   font-family:'Comfortaa';
   color:#d7efef;
 }
+#footer {
+  font-size:10px;
+}
+#link {
+  text-decoration:none;
+  color:mediumseagreen;
+}
